# haskell-cas

./: .gitignore  CAS.hs  Makefile  README.md  Test.hs  TestCAS.hs  Test_CAS.hs  Vars.hs  cas.cabal  comments.md  notes.txt
src/: CAS.hs  CasPrelude.hs  Expr.hs  Vars.hs
src/Expr/: Add.hs  Const.hs  Fractional.hs  Mul.hs  Num.hs  Show.hs
test/: QuickTests.hs  Test.hs  UnitTests.hs
test/QuickTests/: Addition.hs  Arbitrary.hs  Multiplication.hs  Ordering.hs
test/UnitTests/: Addition.hs  Base.hs  Main.hs  Multiplication.hs  Ordering.hs  Show.hs
