name:                cas
version:             0.1.0.0
synopsis:            Computer Algebra System (CAS) implemented in Haskell
description:         Please see README.md
homepage:            https://github.com/abid-mujtaba/cas#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Abid H. Mujtaba
maintainer:          abid.mujtaba@comsats.edu.pk
copyright:           2015
category:            custom
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CAS
                     , Expr
                     , Vars
  -- We must define other modules that are used by the library but are not exposed to external users
  -- In particular the Vars module is only for purposes of debugging inside the ghci
  -- other-modules:       Expr
                    --  , Vars
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010


test-suite cas-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base
                     , cas
                     , HUnit
                     , QuickCheck
  other-modules:       UnitTests
                     , UnitTests.Base
                     , UnitTests.Addition
                     , UnitTests.Multiplication
                     , UnitTests.Ordering
                     , QuickTests
                     , QuickTests.Arbitrary
                     , QuickTests.Addition
                     , QuickTests.Multiplication
                     , QuickTests.Ordering
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/abid-mujtaba/haskell-cas
